--- a/src/components/tabStyles.scss
+++ b/src/components/tabStyles.scss
@@ -7,7 +7,7 @@ body {
   // flex-direction: column;
 }
 
-// .app {
-//   display: grid;
-//   grid-template-columns: 30% 70%;
-// }
+.app {
+  // display: grid;
+  // grid-template-columns: 30% 70%;
+}
